# axummaudhtmxwebsite

./: Cargo.toml  build_run.sh  justfile
src/: about.rs  club.rs  gallery.rs  join.rs  links.rs  main.rs  page.rs  tamil_school.rs
src/static/: humans.txt  package-lock.json  package.json  tailwind.config.js
src/static/css/: main.css  style.css
