[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
clap = "4.4.6"
maud = { version = "0.25.0", features = ["axum"] }
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
tower-http = {version="0.4.4", features = ["full"]}
tower = { version = "0.4", features = ["full"] }
axum-extra = "0.8.0"
