[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
clap = "4.5.4"
maud = { version = "0.26.0", features = ["axum"] }
rand = "0.8.5"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = {version="0.5.2", features = ["full"]}
tower = { version = "0.4", features = ["full"] }
axum-extra = "0.9.3"
mongodb = "3.0.0"
